# DesignProblems

BuySellOrder/: CMakeLists.txt  run.sh
BuySellOrder/include/: Order.h  OrderBase.h  OrderBuy.h  OrderManager.h  OrderSell.h  Parser.h  Utility.h
BuySellOrder/src/: Order.cpp  OrderBase.cpp  OrderBuy.cpp  OrderManager.cpp  OrderSell.cpp  Parser.cpp  Utility.cpp  main.cpp
ConsoleDrawing/: CMakeLists.txt  Tech_Coding_Challenge.txt  run.sh
ConsoleDrawing/include/: Canvas.h  CanvasManager.h  CommandCreateCanvas.h  CommandCreateLine.h  CommandCreateRectangle.h  CommandFactory.h  CommandFill.h  CommandParser.h  CommandQuit.h  Display.h  DisplayCanvas.h  DrawingController.h  ICanvas.h  ICommand.h  IShape.h  MyUtils.h
ConsoleDrawing/source/: Canvas.cpp  CanvasManager.cpp  CommandCreateCanvas.cpp  CommandCreateLine.cpp  CommandCreateRectangle.cpp  CommandFactory.cpp  CommandFill.cpp  CommandParser.cpp  CommandQuit.cpp  DrawingController.cpp  MyUtils.cpp  main.cpp
PaperScissorRock/: CMakeLists.txt  README.txt  run.sh
PaperScissorRock/include/: ComputerPlayer.h  Display.h  Game.h  IPlayer.h  Paper.h  PlayObject.h  Player.h  Rock.h  Scissor.h  UserDefined.h
PaperScissorRock/source/: ComputerPlayer.cpp  Display.cpp  Game.cpp  Main.cpp  Paper.cpp  Player.cpp  Rock.cpp  Scissor.cpp
VisitorPattern_AreaAndShape/: .main.cpp.swp  CMakeLists.txt  README.txt  run.sh
VisitorPattern_AreaAndShape/include/: AreaVisitor.h  Circle.h  MyUtils.h  Rectangle.h  Shape.h  ShapeVisitor.h  Triangle.h
VisitorPattern_AreaAndShape/source/: AreaVisitor.cpp  Circle.cpp  MyUtils.cpp  Rectangle.cpp  Triangle.cpp  main.cpp
